# advent_of_code_2021

./: .gitignore
async_test/: Cargo.toml
async_test/src/: main.rs
day_01/: Cargo.toml
day_01/src/: main.rs
day_02/: Cargo.toml
day_02/src/: main.rs
day_03/: Cargo.toml
day_03/src/: binary_try.rs  good.rs  main.rs
day_04/: Cargo.toml
day_04/src/: main.rs
day_05/: Cargo.toml
day_05/src/: main.rs
day_06/: Cargo.toml
day_06/src/: main.rs
day_07/: Cargo.toml
day_07/src/: main.rs
day_08/: Cargo.toml
day_08/src/: main.rs  old.rs
day_09/: Cargo.toml
day_09/src/: main.rs
