[package]
name = "day_09"
version = "0.1.0"
authors = ["konrad-grochowski <konrad7g@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.19"
tokio = { version = "1", features = ["full"] }
itertools = "0.10.1"
